# Programming

./: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  README.md  config  git_setup  gitup  index  python3103.chm:Zone.Identifier
HTML/Games/: index.html  index.php  style.css  tree.css  tree.js
Python/: America.py  Assignments.py  Commenting.py  Denmark.py  Hello World.py  Jack_and_Jill.py  School.py  TweetBot.py  expression_examples.py  halt.py  header_framework.py  hello_world.py  junk.py  number  pi.py  pinky.py  py_expressions.py  socket_test.py  socket_test2.py  source_url  test.txt  whatever.py  whatever2.py  wordpress_backup.py
Python/Learning Python 4th Edition/: stop_exit.py
Python/test/: s.py  ss.py
Rust/: README.md  left_off.txt
Rust-Behemoth-II/: ._HelloWorld
Rust-Behemoth-II/hello_cargo/: ._target
Rust/Rando/fizzbuzz/v007/: Cargo.toml
Rust/branches/: Cargo.toml
Rust/ch1_hello_world/: Cargo.toml  main  main.rs
Rust/ch2_guessing_game/: Cargo.toml
Rust/ch3_variables/: Cargo.toml
Rust/computing_pi/: Cargo.toml
Rust/f_to_c/: Cargo.toml
Rust/functions/: Cargo.toml
Rust/hello_World/: Cargo.toml  hello_World  main
Rust/loops/: Cargo.toml
Rust/the_end/: Cargo.toml
Zenva/average_temperature/: Cargo.toml
Zenva/fib_seq_two/: Cargo.toml
Zenva/fibonacci_sequence/: Cargo.toml
Zenva/ownership/: Cargo.toml
Zenva/student_scores/: Cargo.toml
Zenva/variables_live_part_one/: Cargo.toml
Zenva/variables_live_part_two/: Cargo.toml
Zenva/variables_live_string_declaration/: Cargo.toml
bash/: test.sh  test2.sh  wordpress_backup.sh
logs/: HEAD
(+103 files in other folders)
