[package]
name = "fizzbuzz"
version = "0.0.7"
authors = ["Grunk <grunk@xaerolimit.net"]
rust-version = "1.73.0"
description = "Classic fizzbuzz test"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at 
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
